# hjik

./: Cargo.toml  build.sh
src/: bin.rs  lib.rs
static/: hjik.js  hjik_bg.wasm  index.html
