[package]
name = "hjik"
version = "0.1.0"
authors = ["yamafaktory <yamafaktory@gmail.com>"]
edition = "2018"

[[bin]]
name = "static_dev_server"
path = "src/bin.rs"

[lib]
crate-type = ["cdylib"]
name = "hjik"
path = "src/lib.rs"

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
wasm-bindgen = "0.2.68"

[profile.release]
lto = true
